src/components/Sidebar/style.css
aside{
  flex: 1;
  padding: 2%;
  color: #34495e;
  display: flex;
  flex-direction: column;
}
  
aside textarea{
    margin-top: 20px;
    width: 100%;
}

.next{
	box-shadow:inset 0px 1px 0px 0px #2ecc70;
	background:linear-gradient(to bottom, #2ecc70 5%, #2abd67 100%);
	background-color:#2ecc70;
	border-radius:6px;
	border:1px solid #2ecc70;
	display:inline-block;
	width: 100%;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:15px;
	font-weight:bold;
	padding:6px 24px;
	text-decoration:none;
	text-shadow:0px 1px 0px #4e6658;
}

.next:hover {
	background:linear-gradient(to bottom, #2abd67 5%, #2ecc70 100%);
	background-color:#2abd67;
}
.next:active {
	position:relative;
	top:1px;
}

.text-em{
	color: #2196F3;
}

.instructionsText{
	color: #34495e;
}

#instructions{
    background-color: #ecf0f1;
	padding: 20px;
}

#sentence{
	margin-top: auto;
}

